--- a/index.html
+++ b/index.html
@@ -67,6 +67,14 @@
         var firstScriptTag = document.getElementsByTagName('script')[0];
         firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
         </script></script>
+
+<script type="text/javascript">
+    
+    if (screen.width <= 700) {
+    document.location = "mobile.html";
+    }
+    
+    </script>
 </body>
 <footer>
     <a class="notion_doc" href="">Should you listen to music while studying?</a>
