--- a/mobile.html
+++ b/mobile.html
@@ -17,7 +17,7 @@
 </head>
 <body>
     <center>
-        <h2>Study.Fm only works on desktop for now.</h2>
+        <h3>Study.Fm only works on desktop for now. Check out studyfm.live on desktop.</h3>
     </center>
 </body>
 </html>
