addition of mobile screen

--- a/index.html
+++ b/index.html
@@ -80,13 +80,13 @@
         firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
         </script></script>
 
-<!--<script type="text/javascript"> 
+<script type="text/javascript"> 
     
     if (screen.width <= 700) {
     document.location = "mobile.html";
     }
     
-    </script>-->
+    </script>
 </body>
 <footer>
     <a class="notion_doc" href="">Should you listen to music while studying?</a>
